[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/CityMap/Pickups/Pickup.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/CityMap/Pickups/Heart.gd" type="Script" id=2]
[ext_resource path="res://assets/spritesheets/heart.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "_reset"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Heart" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
hframes = 6
frame = 2

[node name="AnimateFrameTimer" type="Timer" parent="." index="2"]
wait_time = 0.1
autostart = true

[node name="DeathTimer" type="Timer" parent="." index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/_reset = SubResource( 1 )
anims/hide = SubResource( 2 )
[connection signal="timeout" from="AnimateFrameTimer" to="." method="_on_AnimateFrameTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
